--- a/style.css
+++ b/style.css
@@ -86,10 +86,16 @@ nav.topNav {
     padding: 17px 0px;
     font-size: 15px;
     margin-right: 30px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .navMenu ul li a {
     padding: 17px 0px;
+    font-weight: 600;
 }
 
 .menuButtons {
@@ -113,6 +119,7 @@ nav.topNav {
     transition: 0.5s;
     border: none;
     background-size: 200%;
+    margin-left: 25px;
 }
 
 .navButton a:hover {
@@ -120,6 +127,7 @@ nav.topNav {
 }
 
 .navMenu ul li a::after {
+    position: absolute;
     content: "";
     display: block;
     width: 100%;
@@ -354,13 +362,14 @@ section#hero {
 }
 .heroExperiences {
     width: 85%;
-    margin: 50px auto;
+    margin: 60px auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .experience {
@@ -382,4 +391,97 @@ section#hero {
     color: #dddddd;
     margin-left: 12px;
     line-height: 1.6;
+}
+.sectionTopHeading {
+    width: 85%;
+    margin: auto;
+    margin-top: 10%;
+    text-align: center;
+}
+
+.sectionTopHeading h1 {
+    font-size: 45px;
+    margin-bottom: 20px;
+    background-image: linear-gradient(
+        to right,
+        var(--theme-primary) 30%,
+        #ffffff 100%
+    );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.sectionTopHeading p {
+    font-size: 16px;
+    color: #dddddd;
+    width: 50%;
+    margin: auto;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.allServices {
+    width: 85%;
+    margin: 50px auto;
+    position: relative;
+}
+
+.serviceCard {
+    display: grid;
+    grid-template-columns: 5% 33% 47% 15%;
+    border-bottom: 1px solid var(--theme-secondary);
+    z-index: 10;
+}
+
+.serviceCard div {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    z-index: 10;
+}
+
+section#services {
+    padding-top: 1px;
+    background: var(--theme-accent-bg);
+}
+
+.serviceName {
+    justify-content: flex-start !important;
+    font-size: 20px;
+}
+
+.serviceNo h2 {
+    color: var(--theme-primary);
+    font-size: 20px;
+    transition: 0.5s ease-out;
+}
+
+.serviceInfo p {
+    color: #dddddd;
+}
+
+.serviceLink a i::before {
+    font-size: 30px;
+    color: var(--theme-primary);
+}
+.serviceLink a i {
+    transform: rotate(90deg);
+    transition: 0.5s ease-out;
+}
+.allServices .allServicesBack {
+    width: 100%;
+    height: 120px;
+    background-image: linear-gradient(
+        260deg,
+        var(--theme-secondary) 0%,
+        var(--theme-primary) 100%
+    );
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    transition: 0.5s ease-out;
 }
