--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --heading-primary: #102039;
     --theme-accent-2: #140c1c;
     --theme-accent-bg: #050709;
+    --theme-accent-bg-light: #0f0715;
     --white: #ffffff;
     --off-white: #f6f3fc;
     --grey-2: #d9d9d9;
@@ -44,6 +45,7 @@ h5,
 h6,
 p,
 a,
+li,
 button {
     font-family: "Sora", sans-serif;
 }
@@ -397,6 +399,7 @@ section#hero {
     margin: auto;
     margin-top: 10%;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .sectionTopHeading h1 {
@@ -424,6 +427,7 @@ section#hero {
     width: 85%;
     margin: 50px auto;
     position: relative;
+    margin-bottom: 80px;
 }
 
 .serviceCard {
@@ -484,4 +488,88 @@ section#services {
     top: 0;
     left: 0;
     transition: 0.5s ease-out;
+}
+section#works {
+    background: var(--theme-accent-bg-light);
+    padding: 10px 0px;
+}
+.catagoryContainer ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    width: 35%;
+    margin: auto;
+    background: var(--theme-accent-bg);
+    padding: 5px;
+    border-radius: 30px;
+}
+
+.catagoryContainer ul li {
+    /* border: 1px solid; */
+    padding: 15px 30px;
+    border-radius: 30px;
+    color: #dddddd;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.catagoryContainer {
+    margin-top: 40px;
+}
+
+.activeCatagory {
+    background-image: linear-gradient(
+        to right,
+        var(--theme-primary) 20%,
+        var(--theme-secondary) 100%
+    );
+}
+.coverImgCon img {
+    max-width: 90%;
+    /* max-height: 2%; */
+    object-fit: contain;
+}
+
+.workList {
+    width: 85%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 47% 47%;
+    justify-content: space-between;
+    align-items: center;
+    justify-items: stretch;
+}
+.work {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.work a {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 15px;
+}
+
+.coverImgCon {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 30px;
+    padding-bottom: 0;
+    overflow: hidden;
+    aspect-ratio: 1.15;
+    border-radius: 15px;
+    background: var(--theme-accent-2);
+}
+
+.workInfo {
+    border: 1px solid;
+    width: 100%;
 }
