--- a/style.css
+++ b/style.css
@@ -543,11 +543,13 @@ section#works {
     justify-content: space-between;
     align-items: center;
     justify-items: stretch;
+    position: relative;
 }
 .work {
     position: relative;
     top: 0;
     left: 0;
+    margin: 25px 0px;
 }
 
 .work a {
@@ -570,6 +572,46 @@ section#works {
 }
 
 .workInfo {
-    border: 1px solid;
     width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-image: linear-gradient(
+        260deg,
+        var(--theme-secondary) 0%,
+        var(--theme-primary) 100%
+    );
+    border-radius: 13px;
+    transform: translateY(15px);
+    opacity: 0;
+    transition: 0.3s ease-out;
+}
+.workInfoText p {
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+.workInfoIcon i::before {
+    font-size: 25px;
+}
+
+.work:hover .workInfo {
+    transform: translateY(0px);
+    opacity: 1;
+}
+.workList::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: radial-gradient(
+        circle,
+        var(--theme-secondary) 0%,
+        var(--theme-accent-bg-light) 25%
+    );
 }
