--- a/style.css
+++ b/style.css
@@ -401,9 +401,9 @@ section#hero {
 .sectionTopHeading {
     width: 85%;
     margin: auto;
-    margin-top: 7%;
+    margin-top: 110px;
     text-align: center;
-    margin-bottom: 4%;
+    margin-bottom: 40px;
 }
 
 .sectionTopHeading h1 {
@@ -411,8 +411,8 @@ section#hero {
     margin-bottom: 20px;
     background-image: linear-gradient(
         to right,
-        var(--theme-primary) 0%,
-        #ffffff 100%
+        var(--theme-primary) 40%,
+        #ffffff 70%
     );
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -626,8 +626,8 @@ section#resume {
     align-content: center;
     align-items: flex-start;
     width: 85%;
-    margin: 80px auto;
-    padding: 20px 0px;
+    margin: 100px auto;
+    padding: 5px 0px;
 }
 
 .expTopHead {
